--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Belajar Git - Project 01</title>
+	<title>Belajar Git : Remote Repositort</title>
 </head>
 <body>
 	<p>Hallo Semua, Saya sedang belajar Git</p>
+	<p>Yay! saya sedang belajar tentang remote repository</p>
 </body>
 </html>
